--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+# temporal directory
+house-scraper/tmp
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode
 
