--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,4 @@ cython_debug/
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
+.vscode/settings.json
