--- a/house-scraper/.gitignore
+++ b/house-scraper/.gitignore
@@ -1,6 +1,6 @@
 
 # temporal directory
-house-scraper/tmp
+tmp
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode
