--- a/house-scraper/.gitignore
+++ b/house-scraper/.gitignore
@@ -2,6 +2,9 @@
 # temporal directory
 tmp
 
+# chrome session
+chrome-session
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode
 
