--- a/house-scraper/.vscode/launch.json
+++ b/house-scraper/.vscode/launch.json
@@ -5,6 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Setup chrome",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/scraper/chrome_setup.py",
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
             "name": "Web Scraping",
             "type": "python",
             "request": "launch",
