--- a/house-scraper/.vscode/launch.json
+++ b/house-scraper/.vscode/launch.json
@@ -4,6 +4,7 @@
     // Para más información, visite: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Setup chrome",
             "type": "python",
@@ -28,6 +29,15 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": ["-i"]
+        },
+        {
+            "name": "Fotocasa",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/scraper/__main__.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": ["-f"]
         },
     ]
 }
