added only-merge config #14

--- a/house-scraper/.vscode/launch.json
+++ b/house-scraper/.vscode/launch.json
@@ -22,6 +22,15 @@
             "justMyCode": true
         },
         {
+            "name": "Merge",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/scraper/__main__.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": ["-m"]
+        },
+        {
             "name": "Idealista",
             "type": "python",
             "request": "launch",
